Fix overflow issue. Closes #24

--- a/public/stylesheets/editor.css
+++ b/public/stylesheets/editor.css
@@ -1388,15 +1388,11 @@ ul.checkbox-list li label {
 {
 	float:left;
 	width:650px;
-	height:400px;
+	height:500px;
 	background:white;
 	border:1px solid #ddd;
 	padding:10px;
 }
-
-
-
-
 
 #cf-list-container,
 #cb-list-container,
